--- a/static/assets/fonts/fonts.css
+++ b/static/assets/fonts/fonts.css
@@ -1,5 +1,5 @@
-/* 
+
 @font-face {
-  font-family: "Compacta";
-  src: url("unicode.compacta.woff2");
-} */
+  font-family: "LibreBaskerville";
+  src: url("LibreBaskerville-Regular.woff2");
+}
