--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4539,7 +4539,7 @@ height:100vh;
 
 .horizontal-holder{
   position:relative;
-  height:100vh;
+  /* height:100vh; */
   overflow:hidden;
 }
 
@@ -4835,7 +4835,7 @@ height:100vh;
 } */
 
 
-#homestart{height:30vh; border:0px solid blue}
+/* #homestart{height:30vh; border:0px solid blue} */
 
 @media only screen and (min-width: 49rem) {
   /* .wrap-element {
@@ -4942,8 +4942,9 @@ cursor:pointer;
 
 .wrap-element {
   position: relative;
-  padding-bottom: 56.25%;
-  height:100vh;
+  /* padding-bottom: 56.25%; */
+display:block;
+  top:0;
   color:#fff !important;
 }
 .wrap-element iframe {
@@ -4952,7 +4953,7 @@ cursor:pointer;
   left: 0;
   width: 300%; 
   left: -100%; 
-  height:100vh;
+  height:100%;
   border: 0;
   aspect-ratio: 16 / 9;
 }
@@ -4972,7 +4973,7 @@ cursor:pointer;
   } */
   .pagination{position:absolute; top:75vh;}
   .panelspacer{height:0 !important; padding-top:0 !important;}
-#homestart{height:60vh !important;}
+/* #homestart{height:60vh !important;} */
 }
 
 /* @media (min-width: 1300px) {
