--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4951,8 +4951,8 @@ display:block;
   position: absolute;
   top: 0;
   left: 0;
-  width: 300%; 
-  left: -100%; 
+  /* width: 300%; 
+  left: -100%;  */
   height:100%;
   border: 0;
   aspect-ratio: 16 / 9;
