--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1382,12 +1382,12 @@ height:100%;
                 margin:auto;
                 padding:10px 10px;
                 background:rgba(0, 0, 0, .7);
-                opacity:.7;
+                opacity:.9;
                 display:flex;
                 flex-direction:column;
                 justify-content:center;
                 border-radius:12px;
-                bottom:80px; right:30px;
+                bottom:80px; right:-40px;
                 color:#fff;
                 transform: rotate(90deg);
                 font-size:clamp(1rem, 1.5vw, 2rem);
@@ -4973,9 +4973,22 @@ display:block;
   } */
   .pagination{position:absolute; top:75vh;}
   .panelspacer{height:0 !important; padding-top:0 !important;}
+  .frontvideo{max-height:35vh !important}
+  .react-player iframe{position:relative; top:0 !important;}
+  #homestart{height:35vh !important}
 /* #homestart{height:60vh !important;} */
 }
 
 /* @media (min-width: 1300px) {
   .pagination{position:absolute; top:185px;}
   } */
+
+
+  .react-player__preview{
+    background:#111 !important;
+    height: auto !important;
+  }
+
+ 
+
+
