--- a/static/assets/fonts/fonts.css
+++ b/static/assets/fonts/fonts.css
@@ -1,5 +1,8 @@
 
 @font-face {
   font-family: "LibreBaskerville";
-  src: url("LibreBaskerville-Regular.woff2");
+  font-style: normal;
+  font-weight: 400;
+  src: url("LibreBaskerville-Regular.woff2") format('woff2');
+  font-display: swap;
 }
