--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4061,7 +4061,7 @@ height:100vh;
                          @media (max-width: 48rem) {
                            .sliderholder{height: 100vh;}
                            .horizontal-scroll-wrapper{margin:10px auto 0 auto !important;
-                             width: calc(100vw + 1px) !important;
+                             width: calc(100vw - 1px) !important;
                            transform: rotate(-90deg) translateY(-100vw) !important;
                            
                            }
@@ -4080,7 +4080,7 @@ height:100vh;
                            /* .sliderholder{height: 100vh !important;} */
            
                            .horizontal-scroll-wrapper{margin:0 auto 0 auto !important;
-                           width: calc(100vw + 1px) !important;
+                           width: calc(100vw -1 1px) !important;
                            transform: rotate(-90deg) translateY(-100vw) !important;
                            }
    
@@ -4159,7 +4159,7 @@ height:100vh;
 
            
                          .sliderholder1::before{
-                           content:' Specials\2329  swipe ';
+                           content:' Specials \2329  swipe ';
                            position:absolute;
                            z-index: 3;
                            display: inline-block;
@@ -4173,7 +4173,7 @@ height:100vh;
                            border-radius:12px;
                            top:30%;
                            right:10px;
-                           color:#fff;
+                           color:rgb(204, 13, 13) !important;
                            text-shadow:2px 2px 2px #333;
                          }
 
