--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -509,7 +509,7 @@ transition: var(--transition);  */
 
 display: flex;
 flex-direction: row;
-color: #E3272D;
+color: #f0e9e9;
 /* background-color: var(--primary-color); */
 /* background: linear-gradient(180deg, rgb(233, 171, 219) 1%, var(--primary-color) 99%); */
 align-self: center;
@@ -525,7 +525,7 @@ transition: var(--transition);
 font-size: 140%;
 text-decoration: none;
 text-shadow: 0px 0px 0px #333 !important;
-box-shadow:  0 0px 14px #E3272D;
+/* box-shadow:  0 0px 14px #f0e8e8; */
 /* filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8));  */
 /* outline-width: 1px;
 outline-style: dotted;
@@ -533,8 +533,9 @@ outline-color: var(--primary-color); */
 }
 .actionJackson:hover{
   /* color: #fff !important; */
-  box-shadow:  0 0px 42px #fa1e01;
+  box-shadow:  0 0px 42px #f7f2f1;
 outline:1px rgb(0, 0, 0);
+
   /* filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.8)); */
 }
 
@@ -1375,20 +1376,20 @@ height:100%;
               } */
 
               .horizontal-scroll::before{
-                content:' SPECIALS \2329  swipe ';
+                content:'  \2329\2329  swipe for SPECIALS ';
                 position:absolute;
                 z-index:2;
                 display: inline-block;
                 margin:auto;
                 padding:10px 10px;
                 background:rgba(0, 0, 0, .7);
-                opacity:.9;
+                opacity:1;
                 display:flex;
                 flex-direction:column;
                 justify-content:center;
                 border-radius:12px;
                 bottom:80px; right:-40px;
-                color:#fff;
+                color:rgb(255, 254, 254);
                 transform: rotate(90deg);
                 font-size:clamp(1rem, 1.5vw, 2rem);
                 text-shadow:2px 2px 2px #333;
@@ -1409,7 +1410,7 @@ height:100%;
                 content:' scroll \276F \276F ' !important;
               }
 .horizontal-scroll::before, .sliderholder1::before{
-                content:'SPECIALS scroll \276F \276F ' !important;
+                content:'Scroll for SPECIALS \276F \276F ' !important;
               }
 
              }
