--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1382,17 +1382,18 @@ height:100%;
                 display: inline-block;
                 margin:auto;
                 padding:10px 10px;
-                background:rgba(0, 0, 0, .7);
+                background:rgba(0, 0, 0, .4);
                 opacity:1;
                 display:flex;
                 flex-direction:column;
                 justify-content:center;
                 border-radius:12px;
-                bottom:80px; right:-40px;
+                bottom:90px; right:-40px;
                 color:rgb(255, 254, 254);
                 transform: rotate(90deg);
                 font-size:clamp(1rem, 1.5vw, 2rem);
                 text-shadow:2px 2px 2px #333;
+                font-family:LibreBaskerville;
               }
 
   /* .horizontal-scroll-wrapper:hover::before{
