--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -1,14 +1,26 @@
 @import "theme-variables";
 body {
 	font-family: var(--font-body);
-	color:#eee;
-	background:#111;
+	// color:#eee;
+	// background:#111;
 	overflow-x: hidden !important;
 	/* overflow-y: hidden !important;
 	*/
 	width:100vw;
 	scroll-behavior: smooth;
 }
+
+// body.homepage{
+//   overflow-y: hidden !important;
+//   overflow-x: hidden !important;
+// }
+
+body.blogpost{
+  overflow-y: hidden !important;
+  overflow-x: hidden !important;
+}
+
+
 #posts article{
 	margin-bottom:4vh;
 }
@@ -583,41 +595,37 @@ a [aria-current]:hover{
 
 
 
-
+body.blogpost .sidebarIconToggle{display: none;}
 
 
 #sidebarMenu {
-	height: 75vh;
 	position: fixed;
-	z-index:3;
+	z-index:50;
 	right: 0;
-	top:0;
-	display:flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	padding:75vh 0 0 0;
+	padding:0 0 0 0;
 	transform: translateX(100vw);
 	transition: transform 250ms ease-in-out;
+  background:transparent;
 }
-/* #sidebarMenu button.menutheme div:nth-child(2){
-	display: none !important;
-} */
+
+
 .sidebarMenuInner{
 	margin:0 0 0 0;
-	padding:75vh 0 0 0;
+	padding:0 0 0 0;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	background-color:#111;
-	background-color:rgba(32, 140, 146, 0.493);
+	// background-color:rgba(32, 140, 146, 0.493);
 	border-left:1px solid rgba(255, 255, 255, 0.1);
 	border-radius: 12px 0 0 12px !important;
 	min-width: 220px;
 	background-size: 140% 200%;
+  overflow:hidden;
 }
 .sidebarMenuInner {
 	transition: all .8s ease-in-out;
-	background-color: #111;
+	// background-color: #111;
 }
 .sidebarMenuInner li{
 	list-style: none;
@@ -852,6 +860,25 @@ footer{
 // .youtubehide{
 // 	height:68vh;
 // }
+
+
+@keyframes move {
+  0% {
+    opacity: 1;
+    z-index: -3;    
+    /* transform: scale(1.0);
+    transform-origin: 50% 0%; */
+  }
+  
+
+  100% {
+/* transform-origin: top -80%;
+    transform: scale(0); */
+    opacity: 0;
+    z-index: -3;
+  }
+}
+
 
 @media (hover: hover) {
 	.virtualtour{
@@ -1091,6 +1118,15 @@ footer{
 	}
 }
 /* HUD CONTROLS */
+
+@media (max-width: 48em) {
+	#controls{
+		position:absolute;
+		right:2vw;
+    bottom:-10% !important;
+	}
+}
+
 .pagination a{
 	color:inherit !important;
 }
