--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -600,7 +600,7 @@ body.blogpost .sidebarIconToggle{display: none;}
 
 #sidebarMenu {
 	position: fixed;
-	z-index:50;
+	z-index:5;
 	right: 0;
 	padding:0 0 0 0;
 	transform: translateX(100vw);
@@ -610,9 +610,9 @@ body.blogpost .sidebarIconToggle{display: none;}
 
 #secondMenu {
 	position: fixed;
-	z-index:50;
+	z-index:5;
   top:0;
-left:0;
+  left:0;
 	padding:0 0 0 0;
 	transform: translateX(-250px);
 	transition: transform 250ms ease-in-out;
@@ -620,12 +620,12 @@ left:0;
   // overflow:hidden;
   // border:2px solid purple;
   width:250px;
-  height:100%;
-  background:transparent;
-  opacity:.6;
+  // opacity:.6;
   display:block;
 
-  .sidebarMenuInner{	border-radius: 0 12px 12px 0 !important;}
+  .sidebarMenuInner{	border-radius: 0 12px 12px 0 !important;
+    // background-color:#111;
+  }
 }
 
 
@@ -1202,14 +1202,19 @@ animation: fadeout .5s forwards;
 	justify-content:flex-end;
 	gap:20px;
 }
+
+
 .pagination ul li{
 	font-weight: bold;
 	padding:.3rem;
-	color:#999;
+	// color:#999;
 	font-size: 1rem;
 	border-radius: 12px;
 	filter: drop-shadow(2px 2px 2px #000);
 	cursor:pointer;
+ text-shadow:2px 2px 0 #222 !important; 
+ filter:drop-shadow(0px 0px 5px rgba(155,155,155,1)) !important; 
+ color:#fff !important;
 }
 .controls{
 	animation:fade1;
@@ -1307,8 +1312,8 @@ animation: fadeout .5s forwards;
 	text-decoration: none;
 	background: linear-gradient(180deg, rgb(34, 26, 32) 1%, #111 99%);
 	align-self: center;
-	padding: var(--space-sm) var(--space-xl);
-	border-radius: var(--radius-md);
+	// padding: var(--space-sm) var(--space-xl);
+	border-radius: 8px;
 	border:1px solid rgb(104, 87, 102);
 	font-weight: var(--bold);
 	align-items: center;
@@ -1406,15 +1411,16 @@ Contact page.contact-page {
 		display: inline-block;
 		margin: 0 0;
 		max-width: 45vw;
+    text-shadow:2px 2px 0 #222 !important;
 	}
 	a {
 		display: inline-block;
-		padding: 5px 20px !important;
-		font-weight: bold;
+		// padding: 5px 20px !important;
+		// font-weight: bold;
 		line-height: 1;
 		// background:rgba(0,0,0,0.50);
-		color:#ccc !important;
-		border-radius:12px;
+		// color:#ccc !important;
+		// border-radius:12px;
 		&:hover {
 			color: #fff !important;
 			// pointer-events: none;
@@ -1451,6 +1457,9 @@ Contact page.contact-page {
 		}
 		.page-title {
 			line-height: 1.3;
+    // text-shadow:2px 2px 0 #222;
+    // filter:drop-shadow(0px 0px 5px rgba(155,155,155,1));
+    // color:#fff;
 		}
 	}
 	@media (max-width: $breakpoint-md) {
