--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,4 @@
-.button {
+/* .button {
 	display: inline-flex;
 	align-items: center;
 	color:#ccc;
@@ -33,4 +33,4 @@
 	font-weight: bold;
 	text-shadow: 2px 2px 2px black;
 	background:#080808;
-}
+} */
