--- a/static/assets/fonts/fonts.css
+++ b/static/assets/fonts/fonts.css
@@ -3,6 +3,6 @@
   font-family: "LibreBaskerville";
   font-style: normal;
   font-weight: 400;
-  src: url("LibreBaskerville-Regular.woff2") format('woff2');
+  src: url("LibreBaskerville-Bold.woff2") format('woff2');
   font-display: swap;
 }
