--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -28,7 +28,7 @@ body {
 	margin-bottom:4vh;
 }
 h1,h2,h3,h4,.h1,.h2,.h3,.h4, #menu, .header .menu-icon:before, input.special, .intro:after, .intro:before, .scrolldown, .font, .gatsby-image-wrapper, .full-width-image:after, .sidebarMenuInner li a, .horizontal-scroll::before, .sliderholder1::before {
-	font-family: LibreBaskerville,lucida grande,lucida sans unicode,Tahoma,Sans-Serif !important;
+	font-family: LibreBaskerville, Sans-Serif !important;
 	// font-style: italic;
 	font-weight: 700 !important;
 }
