--- a/src/assets/scss/global.scss
+++ b/src/assets/scss/global.scss
@@ -635,6 +635,7 @@ input[type="checkbox"]:checked ~ .backdrop1 {
 	overflow:hidden;
 	width:100%;
 	padding:0 10px;
+	gap:10px
 }
 @media (min-width: 48em) {
 	.signbox {
